; ModuleID = '/home/carl/AnghaBench/redis/src/extr_sentinel.c_sentinelAbortFailover.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_sentinel.c_sentinelAbortFailover.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i64, %struct.TYPE_4__*, i32 }
%struct.TYPE_4__ = type { i32 }

@SRI_FAILOVER_IN_PROGRESS = common dso_local global i32 0, align 4
@SENTINEL_FAILOVER_STATE_WAIT_PROMOTION = common dso_local global i64 0, align 8
@SRI_FORCE_FAILOVER = common dso_local global i32 0, align 4
@SENTINEL_FAILOVER_STATE_NONE = common dso_local global i64 0, align 8
@SRI_PROMOTED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sentinelAbortFailover(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %3 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %4 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 8
  %6 = load i32, i32* @SRI_FAILOVER_IN_PROGRESS, align 4
  %7 = and i32 %5, %6
  %8 = call i32 @serverAssert(i32 %7)
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 1
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @SENTINEL_FAILOVER_STATE_WAIT_PROMOTION, align 8
  %13 = icmp sle i64 %11, %12
  %14 = zext i1 %13 to i32
  %15 = call i32 @serverAssert(i32 %14)
  %16 = load i32, i32* @SRI_FAILOVER_IN_PROGRESS, align 4
  %17 = load i32, i32* @SRI_FORCE_FAILOVER, align 4
  %18 = or i32 %16, %17
  %19 = xor i32 %18, -1
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 8
  %23 = and i32 %22, %19
  store i32 %23, i32* %21, align 8
  %24 = load i64, i64* @SENTINEL_FAILOVER_STATE_NONE, align 8
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %25, i32 0, i32 1
  store i64 %24, i64* %26, align 8
  %27 = call i32 (...) @mstime()
  %28 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %29 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %28, i32 0, i32 3
  store i32 %27, i32* %29, align 8
  %30 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %31 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %30, i32 0, i32 2
  %32 = load %struct.TYPE_4__*, %struct.TYPE_4__** %31, align 8
  %33 = icmp ne %struct.TYPE_4__* %32, null
  br i1 %33, label %34, label %45

34:                                               ; preds = %1
  %35 = load i32, i32* @SRI_PROMOTED, align 4
  %36 = xor i32 %35, -1
  %37 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %38 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %37, i32 0, i32 2
  %39 = load %struct.TYPE_4__*, %struct.TYPE_4__** %38, align 8
  %40 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 4
  %42 = and i32 %41, %36
  store i32 %42, i32* %40, align 4
  %43 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %44 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %43, i32 0, i32 2
  store %struct.TYPE_4__* null, %struct.TYPE_4__** %44, align 8
  br label %45

45:                                               ; preds = %34, %1
  ret void
}

declare dso_local i32 @serverAssert(i32) #1

declare dso_local i32 @mstime(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
